Fix: Discussion area was overflowing on the input field

--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -34,7 +34,7 @@ body {
   top: 3%;
   left: 10%;
   right: 10%;
-  bottom: calc(3% - 50px);
+  bottom: calc(3% + 60px);
   // Style the discussion area
   color: $foreground;
   font-family: $font;
